# Yolov8-tensorrt

./: CMakeLists.txt  README.md  build.sh  onnx2trt.cpp  trt_infer_det.cpp  trt_infer_seg.cpp  usage.md  utils.h
